2005-05-25  Benoît Dejean  <TazForEver@dlfp.org>

	* src/procman.h:
	* src/proctable.c: (proctable_free_info), (remove_info_from_list),
	(get_info): ProcInfo::children is now GSList.

2005-05-23  Benoît Dejean  <TazForEver@dlfp.org>

	* src/memmaps.c: (ghashtable_clear_callback), (ghashtable_clear),
	(add_new_maps), (compare_memmaps), (update_memmaps_dialog),
	(close_memmaps_dialog), (create_memmapsdata), (memmaps_timer),
	(create_single_memmaps_dialog), (create_memmaps_dialog): Big rework.
	
	Moved all data to MemMapsData instead of storing(hiding) stuff in the
	tree's gobject properties. So it's also now reentrant. Added some TODO.
	I think it's cleaner like this. opendialogs.c should be reworked the
	same way :/

2005-05-20  Benoît Dejean  <TazForEver@dlfp.org>

	* src/memmaps.c: (add_new_maps): Little cleanup. Removed unneeded
	MemmapsInfo type.
	
	* configure.in: Post release version bump.

2005-05-18  Benoît Dejean  <TazForEver@dlfp.org>

	* NEWS:
	* configure.in: Released 2.11.2.

2005-05-13  Benoît Dejean  <TazForEver@dlfp.org>

	* src/procdialogs.c: (procdialog_create_kill_dialog): Fixed strangely
	formulated messages.
	Patch by Benjamin LeMasurier <uidzer0@uidzer0.org>.
	Closes #163395.

2005-05-13  Benoît Dejean  <TazForEver@dlfp.org>

	* src/procman.h: ProcConfig::update_inteval is now unsigned.

2005-05-13  Benoît Dejean  <TazForEver@dlfp.org>

	* src/callbacks.c:
	* src/callbacks.h:
	* src/interface.c: (create_proc_view):
	* src/procman.h:
	* src/proctable.c: (search_equal_func), (proctable_new),
	(proctable_update_all), (make_loadavg_string):
	* src/proctable.h: Removed the search box in favor of the tree's
	builtin search.
	
	Added system load averages on the process tab. 

2005-05-13  Benoît Dejean  <TazForEver@dlfp.org>

	* src/smooth_refresh.h: Fixed G_GNUC_INTERNAL usage.

2005-05-12  Benoît Dejean  <TazForEver@dlfp.org>

	* src/procman.h:
	* src/proctable.c: (get_process_user), (update_info_mutable_cols),