@@ -1,5 +1,7 @@
 dnl Process this file with autoconf to produce a configure script.
 
+AC_PREREQ(2.52)
+
 AC_INIT(configure.in)
 AM_INIT_AUTOMAKE(gnome-system-monitor, 2.11.3)
 AM_CONFIG_HEADER(config.h)
@@ -84,15 +86,39 @@ else
   AC_DEFINE_UNQUOTED(PACKAGE_LOCALE_DIR, "${prefix}/${DATADIRNAME}/locale")
 fi
 
-AC_ARG_ENABLE(selinux, AC_HELP_STRING(--enable-selinux,enable SELinux support),enable_selinux=$enableval, enable_selinux=no)
+AC_ARG_ENABLE(selinux, AC_HELP_STRING(--enable-selinux,enable SELinux support),enable_selinux=$enableval, enable_selinux=auto)
 
-if test x$enable_selinux = xyes; then
-   AC_DEFINE(ENABLE_SELINUX, 1, [Define to 1 to enable SELinux support])
-   AM_CONDITIONAL(ENABLE_SELINUX, test x$enable_selinux = xyes)
-   AC_MSG_RESULT(SELinux support enabled)
+
+# SELinux detection
+if test x$enable_selinux = xno ; then
+    have_selinux=no;
 else
-   AC_MSG_RESULT(SELinux support disabled)
+    # See if we have SELinux library
+    AC_CHECK_LIB(selinux, is_selinux_enabled, 
+                 have_selinux=yes, have_selinux=no)
+	
+    if test x$enable_selinux = xauto ; then
+        if test x$have_selinux = xno ; then
+                AC_MSG_WARN([Sufficiently new SELinux library not found])
+        fi
+    else 
+        if test x$have_selinux = xno ; then
+                AC_MSG_ERROR([SElinux explicitly required, and SELinux library not found])
+        fi
+    fi
 fi
+
+AM_CONDITIONAL(HAVE_SELINUX, test x$have_selinux = xyes)
+
+if test x$have_selinux = xyes ; then
+    SELINUX_LIBS=-lselinux
+    AC_DEFINE(HAVE_SELINUX,1,[SELinux support])
+else
+    SELINUX_LIBS=
+fi
+
+AC_SUBST(SELINUX_LIBS)
+
 
 
 dnl Honor ACLOCAL_FLAGS for --enable-maintainer-mode
@@ -107,3 +133,12 @@ help/C/Makefile
 gnome-system-monitor.desktop.in
 ])
 
+
+echo "
+
+Configuration:
+
+        Source code location:      ${srcdir}
+        Compiler:                  ${CC}
+	Building SELinux support:  ${have_selinux}
+"
